# signup-app

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  litellmopenapi.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
app/: database.py  main.py
app/core/: audit.py  config.py  litellm_client.py  middleware.py  rate_limit.py  security.py  sessions.py
app/models/: __init__.py  api_key.py  user.py
app/routes/: auth.py  keys.py  users.py
docs/: problem_statement.md
docs/plans/: 2026-03-09-api-key-manager-design.md  2026-03-09-api-key-manager-implementation.md
mocks/: litellm_mock.py
static/: app.js  index.html  style.css
test/: run_tests.sh
tests/: conftest.py  test_config.py  test_middleware.py  test_models.py  test_oauth.py  test_open_redirect.py  test_root_path.py  test_routes_health.py  test_routes_keys.py  test_routes_users.py  test_routes_verify.py  test_security.py  test_security_headers.py
