[project]
name = "signup-app"
version = "0.2.0"
description = "API key management service backed by LiteLLM proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
